--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "electron": "^13.1.7"
+    "electron": "^13.1.7",
+    "electron-builder": "^22.14.5"
   },
   "scripts": {
     "start": "electron .",
     "build": "npx electron-packager ./ PirexCode --platform=win32 --arch=x64 --icon=assets/iconpx.ico",
+    "dist": "electron-builder -c.extraMetadata.main=main.js",
     "rebuild": "electron-rebuild"
   },
   "dependencies": {
     "electron-json-storage": "^4.5.0",
     "electron-packager": "^15.4.0",
-    "electron-rebuild": "^3.2.3",
     "mousetrap": "^1.6.5",
     "shelljs": "^0.8.4",
     "split-grid": "^1.0.11",
